Implement Coordinated AI UAV Swarm for autonomous Lagos road mapping. Added orchestrator service, frontend dashboard, and updated all documentation. #LagosSentinel #UAVSwarm #MrIridescent

--- a/ROADvision_Lagos_Infographic.html
+++ b/ROADvision_Lagos_Infographic.html
@@ -105,6 +105,46 @@
                 <div class="text-purple-400 font-black text-xl mb-1">COMMAND-LINK</div>
                 <p class="text-[10px] text-slate-500 uppercase font-bold tracking-widest">Peer Real-time</p>
             </div>
+            <div class="glass p-6 rounded-2xl text-center border-orange-500/20">
+                <div class="text-orange-400 font-black text-xl mb-1">AI-SWARM</div>
+                <p class="text-[10px] text-slate-500 uppercase font-bold tracking-widest">UAV Mapping</p>
+            </div>
+        </div>
+
+        <!-- UAV Swarm Section -->
+        <div class="glass p-12 rounded-[3rem] mb-16 border-l-4 border-orange-500">
+            <div class="flex flex-col md:flex-row items-center gap-12">
+                <div class="flex-1">
+                    <h3 class="text-4xl font-black mb-4 text-orange-400">Coordinated AI UAV Swarm</h3>
+                    <p class="text-lg text-slate-300 mb-6 leading-relaxed">
+                        A network of 100+ autonomous drones mapping every road type in Lagos state. Covering all 20 LGAs with real-time intelligence telemetry.
+                    </p>
+                    <ul class="space-y-4">
+                        <li class="flex items-start gap-3">
+                            <div class="bg-orange-500/20 p-1 rounded-full"><svg class="w-4 h-4 text-orange-400" fill="currentColor" viewBox="0 0 20 20"><path d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"></path></svg></div>
+                            <span class="text-sm text-slate-400"><strong>Real-time Mapping</strong> of remote and urban road networks.</span>
+                        </li>
+                        <li class="flex items-start gap-3">
+                            <div class="bg-orange-500/20 p-1 rounded-full"><svg class="w-4 h-4 text-orange-400" fill="currentColor" viewBox="0 0 20 20"><path d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"></path></svg></div>
+                            <span class="text-sm text-slate-400"><strong>Automatic Issue Reporting</strong> to Lagos Ministry of Works.</span>
+                        </li>
+                        <li class="flex items-start gap-3">
+                            <div class="bg-orange-500/20 p-1 rounded-full"><svg class="w-4 h-4 text-orange-400" fill="currentColor" viewBox="0 0 20 20"><path d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"></path></svg></div>
+                            <span class="text-sm text-slate-400"><strong>Inter-Drone Coordination</strong> for massive area coverage.</span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="flex-1 grid grid-cols-2 gap-4">
+                    <div class="bg-orange-500/10 p-8 rounded-3xl border border-orange-500/20 text-center">
+                        <div class="text-3xl font-black text-orange-500 mb-1">100+</div>
+                        <p class="text-[10px] text-orange-300 font-bold uppercase tracking-widest">Active Units</p>
+                    </div>
+                    <div class="bg-slate-900/50 p-8 rounded-3xl border border-slate-800 text-center">
+                        <div class="text-3xl font-black text-slate-300 mb-1">20/20</div>
+                        <p class="text-[10px] text-slate-500 font-bold uppercase tracking-widest">LGA Coverage</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Bottom Footer Section -->
